--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Path Of Idle</title>
+    <title>Unity WebGL Player | Endless Idle Fighter</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Path Of Idle</div>
+        <div id="unity-build-title">Endless Idle Fighter</div>
       </div>
     </div>
     <script>
@@ -33,8 +33,8 @@
         frameworkUrl: buildUrl + "/WebGLBuild.framework.js.gz",
         codeUrl: buildUrl + "/WebGLBuild.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "com.SmoothDev.PathOfIdle",
-        productName: "Path Of Idle",
+        companyName: "com.SmoothDev.EndlessIdleFighter",
+        productName: "Endless Idle Fighter",
         productVersion: "0.1",
       };
 
@@ -53,8 +53,8 @@
           mobileWarning.style.display = "none";
         }, 5000);
       } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1080px";
+        canvas.style.height = "1920px";
       }
       loadingBar.style.display = "block";
 
